--- a/Projets/Printf/Makefile
+++ b/Projets/Printf/Makefile
@@ -6,16 +6,16 @@
 #    By: yotillar <yotillar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/29 21:03:36 by yotillar          #+#    #+#              #
-#    Updated: 2020/03/08 23:07:28 by yotillar         ###   ########.fr        #
+#    Updated: 2020/06/10 20:43:38 by yotillar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
-INCLUDE = /inc/libftprintf.h
+INCLUDE = ./inc/ft_printf.h
 RM = rm -f
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS =  ./src/ft_printf.c \
+SRCS_PF =	./src/ft_printf.c \
 		./src/ft_init.c \
 		./src/ft_check.c \
 		./src/ft_handlers.c \
@@ -23,6 +23,7 @@ SRCS =  ./src/ft_printf.c \
 		./src/ft_display_num.c \
 		./src/ft_display_char.c \
 		./src/ft_display.c \
+		./src/ft_specials.c \
 		./src/ft_conv_x.c \
 		./src/ft_conv_u.c \
 		./src/ft_conv_c.c \
@@ -30,33 +31,39 @@ SRCS =  ./src/ft_printf.c \
 		./src/ft_conv_s.c \
 		./src/ft_conv_c.c \
 		./src/ft_conv_d.c \
+		./src/pf_ft_isdigit.c \
+		./src/pf_ft_itoa_base1.c \
+		./src/pf_ft_itoa_base2.c \
+		./src/pf_ft_min_max.c \
+		./src/pf_ft_strdup.c \
+		./src/pf_ft_strlen.c \
+		./src/pf_ft_substr.c \
+		./src/pf_ft_atoi.c \
 
 BONUS_SRCS = $(SRCS)
 
-LIBFT = make -f ./Libft/Makefile
-
-OBJS = $(SRCS:.c=.o)
+OBJS = $(SRCS_PF:.c=.o)
 
 BONUS_OBJ = $(BONUS_SRCS:.c=.o)
 
 all: $(NAME)
 
-$(NAME): $(OBJS) $(INCLUDE) $(LIBFT)
-	ar -rcs $(NAME) $(OBJS) 
-	ranlib $(NAME)
+$(NAME): $(OBJS) $(INCLUDE)
+	ar -rcs libftprintf.a $(OBJS)
 
-bonus:	$(BONUS_OBJ) $(INCLUDE)
+bonus:	$(BONUS_SRCS) $(INCLUDE)
 	ar -rcs $(NAME) $(BONUS_OBJ)
 	ranlib $(NAME)
 
 clean:
-	$(RM) $(OBJS) $(BONUS_OBJ)
+	$(RM) $(OBJS) $(BONUS_OBJ) || echo .o\ not\ found
 
 fclean: clean
-	$(RM) $(NAME)
+	$(RM) $(NAME) || echo file\ not\ found
 
 re: fclean all
 
 rebonus : fclean bonus
 
-main: gcc $(CFLAGS) main.c libftprintf.a
+main: 
+	gcc $(CFLAGS) main.c libftprintf.a
